--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>JSONTree</title>
+		<title>JSON Tree using D3 ver 3</title>
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/JSONTree.css">
 		<script src="js/d3.v3.js" type="text/javascript" charset="utf-8"></script>
