updating sample json file

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
 		<script type="text/javascript" src="js/JSONTree.js"></script>
 		<footer class="center">
 				<br><br>
-				<p><span>Github Source:</span></p>
+				<p><span><a href="https://github.com/akhiljay/JSON-tree-visualizer">Github Source</a> </span></p>
 				<p><span>Maintained by: Akhil Jayaprakash</span></p>
+				<p><span><a href="https://github.com/bvjebin/JSONTree">Credits</a></span></p>
 
 
 		</footer>
